--- a/QAProject/test-output/index.html
+++ b/QAProject/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testNG.PriorityClass" class="method navigator-link" hash-for-method="openingAmazonSite">openingAmazonSite</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testNG.PriorityClass" class="method navigator-link" hash-for-method="openingCNNBCSite">openingCNNBCSite</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testNG.PriorityClass" class="method navigator-link" hash-for-method="openingYahooSite">openingYahooSite</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testNG.NewTestid04" class="method navigator-link" hash-for-method="f">f</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,28 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testNG.PriorityClass</span>
+              <span class="class-name">testNG.NewTestid04</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="openingAmazonSite">
-                  </a> <!-- openingAmazonSite -->
-                  <span class="method-name">openingAmazonSite</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="openingCNNBCSite">
-                  </a> <!-- openingCNNBCSite -->
-                  <span class="method-name">openingCNNBCSite</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="openingYahooSite">
-                  </a> <!-- openingYahooSite -->
-                  <span class="method-name">openingYahooSite</span>
+                  <a name="f">
+                  </a> <!-- f -->
+                  <span class="method-name">f</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/cv/dp85d4y92knc5rq1zww7mjyc0000gn/T/testng-eclipse-723148122/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/cv/dp85d4y92knc5rq1zww7mjyc0000gn/T/testng-eclipse-552135/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testNG.PriorityClass&quot;/&gt;
+      &lt;class name=&quot;testNG.NewTestid04&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -210,24 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'openingAmazonSite')
-data.setCell(0, 2, 'testNG.PriorityClass')
-data.setCell(0, 3, 15824);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'openingCNNBCSite')
-data.setCell(1, 2, 'testNG.PriorityClass')
-data.setCell(1, 3, 14558);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'openingYahooSite')
-data.setCell(2, 2, 'testNG.PriorityClass')
-data.setCell(2, 3, 11409);
+data.setCell(0, 1, 'f')
+data.setCell(0, 2, 'testNG.NewTestid04')
+data.setCell(0, 3, 76208);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 41 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,18 +221,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testNG.PriorityClass</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testNG.NewTestid04</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">openingAmazonSite</span>
+                <span class="method-name">f</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">openingCNNBCSite</span>
-                <span class="method-start">15836 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">openingYahooSite</span>
-                <span class="method-start">30402 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
